@@ -1,6 +1,12 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.0.56
 
+  *) Elimiated the NET_TIME filter, restructuring the timeout logic.
+     This provides a working mod_echo on all platforms, and ensures any
+     custom protocol module is at least given an initial timeout value
+     based on the <VirtualHost > context's Timeout directive.
+     [William Rowe]  
+
   *) mod_ssl: Correct issue where mod_ssl does not pick up the 
      ssl-unclean-shutdown setting when configured. PR 34452. [Joe Orton]
 
